<resources>
    <string name="app_name" translatable="false">Guarda Shielded</string>
    <string name="app_coin_currency" translatable="false">ZEC</string>
    <string name="app_fee_kb_currency" translatable="false">ZEC</string>
    <string name="freshchat_file_provider_authority" translatable="false">guarda.shielded.provider</string>
    <string name="restore_backup_passphrase">ZEC wallet private key</string>
    <string name="app_top_up_width_other_currency">Top Up Your ZEC Wallet With:</string>
    <string name="top_up_width_other_currency">Purchase ZEC</string>
    <string name="app_currency_name" translatable="false">Zcash</string>
    <string name="et_error_wrong_private_key">Wrong private key</string>
    <string name="sync_service_description">Sync a wallet with a blockchain</string>
    <string name="sync_push_channel_id">Sync push notification channel ID</string>
    <string name="sync_push_fallback_title">Sync push notification</string>
    <string name="sync_push_title">Syncing z-address</string>
    <string name="sync_push_body">-</string>
    <string-array name="field_type_array_data">
        <item>T-ADDRESS</item>
        <item>Z-ADDRESS</item>
    </string-array>
    <string name="start_create_wallet">Create wallet</string>
    <string name="start_login_from_backup">Restore wallet</string>
    <string name="title_restore_backup">Restore</string>
    <string name="restore_backup_enter_backup_passphrase">Enter private key</string>
    <string name="restore_backup_enter_json_pass">Enter password</string>
    <string name="restore_backup_wrong_file_name">Wrong file path</string>
    <string name="restore_backup_wrong_rest_file">Wrong restoring file</string>
    <string name="restore_backup_wrong_json_password">Wrong JSON-file password</string>
    <string name="restore_backup_json_password_empty">Password can not be empty</string>
    <string name="restore_backup_upload_json_file">Upload JSON-file</string>
    <string name="restore_backup_json_more_info">More information about JSON-file</string>
    <string name="restore_backup_restore">Restore</string>
    <string name="transaction_history_your_transactions">Your Transactions</string>
    <string name="deposit_address_share">Share</string>
    <string name="app_usd_currency">USD</string>
    <string name="app_your_address">Your address</string>
    <string name="app_your_address_alt">Encrypted alternate</string>
    <string name="app_display_your_address">Display Address</string>
    <string name="app_display_your_address_alt">Display Encrypted alternate</string>
    <string name="app_show_qr">Show QR</string>
    <string name="app_transaction_history">Home</string>
    <string name="app_purchase">Exchange</string>
    <string name="app_withdraw">Send</string>
    <string name="app_deposit">Receive</string>
    <string name="app_backup">Wallet Security</string>
    <string name="app_setting">Options</string>
    <string name="app_log_out">Log Out</string>
    <string name="app_tap_to_copy">Tap to copy</string>
    <string name="app_you_address">You address</string>
    <string name="withdraw_withdraw_coins">Send coins</string>
    <string name="app_scan_qr">Scan QR</string>
    <string name="withdraw_the_withdrawal_address_is_incorrect">The sending address format is incorrect</string>
    <string name="withdraw_sending_from_z_to_t_not_supported">Sending from Z to T not supported yet</string>
    <string name="app_next">Next</string>
    <string name="withdraw_amount_to_send">Amount to send</string>
    <string name="withdraw_sending">Sending</string>
    <string name="withdraw_sum_send">Sum Send</string>
    <string name="sending_memo_hint">Memo field</string>
    <string name="withdraw_fee_amount">Fee Amount</string>
    <string name="withdraw_arrival_amount">Arrival Amount</string>
    <string name="withdraw_include">Include</string>
    <string name="withdraw_exclude">Exclude</string>
    <string name="withdraw_address_send">Destination Address</string>
    <string name="result_transaction_sent">Transaction\n Sent</string>
    <string name="backup_your_back_up_passphrase">Types of private key</string>
    <string name="backup_instruction">Security is essential - this is why you should keep your private key out of the public eye! Please note that Guarda Wallet does not have access to your keys and cannot recover it in case of loss.</string>
    <string name="fragment_disabled_text">Service is temporarily unavailable</string>
    <string name="setting_language">Language</string>
    <string name="setting_local_currency">Local Currency</string>
    <string name="setting_security_code">Security Code</string>
    <string name="setting_about">About</string>
    <string name="setting_terms_of_use">Terms of Service</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_support">Support</string>
    <string name="setting_node">Custom node</string>
    <string name="app_provided">Provided</string>
    <string name="app_not_provided">Not Provided</string>
    <string name="pincode_create_access_code">Create Access Code</string>
    <string name="pincode_access_code_again">Access Code Again</string>
    <string name="result_code_created">Code \nCreated</string>
    <string name="email_send_coins_to_address">Send coins to address</string>
    <string name="transaction_detail_sum">Sum</string>
    <string name="transaction_detail_date">Date</string>
    <string name="transaction_detail_time">Time</string>
    <string name="transaction_detail_hash">Hash</string>
    <string name="transaction_detail_memo">Memo</string>
    <string name="transaction_detail_balance_before">Balance Before</string>
    <string name="transaction_detail_balance_after">Balance After</string>
    <string name="transaction_detail_confirmations">Confirmations</string>
    <string name="transaction_detail_repeat">Repeat</string>
    <string name="purchase_purchase">Exchange</string>
    <string name="app_copy">Copy</string>
    <string name="app_show">Show</string>
    <string name="app_hide">Hide</string>
    <string name="setting_email">E-mail</string>
    <string name="withdraw_your_current_balance">Your current balance</string>
    <string name="title_empty" translatable="false"> </string>
    <string name="title_wallet">Wallet</string>
    <string name="title_deposit">@string/app_your_address</string>
    <string name="title_withdraw">@string/withdraw_withdraw_coins</string>
    <string name="title_withdraw2">@string/withdraw_address_send</string>
    <string name="title_withdraw3">@string/withdraw_sending</string>
    <string name="title_backup">@string/title_empty</string>
    <string name="title_purchase">@string/purchase_purchase</string>
    <string name="title_purchase_detail">@string/app_your_address</string>
    <string name="title_setting">@string/app_setting</string>
    <string name="title_pincode">@string/title_empty</string>
    <string name="title_email">Confirm E-mail</string>
    <string name="title_transaction_history">@string/title_empty</string>
    <string name="title_transaction_detail">Transaction Details</string>
    <string name="title_start">@string/title_empty</string>
    <string name="title_result">@string/title_empty</string>
    <string name="title_fragment_exchange_about">About Exchange</string>
    <string name="title_fragment_exchange_start">Exchange to</string>
    <string name="title_fragment_exchange_input_address">Exchange</string>
    <string name="exchange_choose_service">Exchange service</string>
    <string name="exchange_send">Send</string>
    <string name="exchange_receive">Receive</string>
    <string name="exchange_rate">Exchange rate (estimated)</string>
    <string name="exchange_start">Start Exchange</string>
    <string name="exchange_unsupported_pair">Selected combination is not supported</string>
    <string name="exchange_service_unavailable">Selected exchange is unavailable</string>
    <string name="exchange_about">The exchange service is swapping one cryptocurrency to another. A variety of exchange services are available within the application. Select the exchange service provider along with the coins you\'d like to swap.\n\nPlease follow the on-screen instruсtions to perform the exchange.\n\nYou can top the wallet up with crypto you already own or by exchanging the coins belonging to a different blockchain. When swapping, make sure the exchanged amount is bigger than the minimum limit.</string>
    <string name="title_fragment_decent_deposit_about">About</string>
    <string name="deposit_decent_about">Notify: In Guarda Decent wallet, you are able to use two types of wallet addresses either your E-mail or the Encrypted alternative address to manage your DCT coins.</string>
    <string name="exchange_generate_hint_left">Address and QR</string>
    <string name="exchange_generate_hint_mid">\nto exchange to</string>
    <string name="exchange_show_qr">Show QR</string>
    <string name="exchange_show_address">Show Address</string>
    <string name="exchange_dest_address_left">Destination</string>
    <string name="exchange_dest_address_right">address</string>
    <string name="exchange_error_internet_connection">Connection error, please try later</string>
    <string name="exchange_error_unknown">Unexpected error, please try later</string>
    <string name="exchange_progress_generate_address">Exchange address generation</string>
    <string name="exchange_error_empty_address">Fill address field</string>
    <string name="exchange_error_empty_extra">Fill extra id field</string>
    <string name="exchange_error_generate_address">Generating exchange address error, please try later</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="logo_wallet" translatable="false">Wallet</string>
    <string name="resync_text_title">Resync Z-address</string>
    <string name="resync_description">If your z-address balance is incorrect you can try to resync the blockchain.\n<i><u>What is a ZCash blockchain synchronization?</u></i>\n\n<b>Attention:</b>\nThe process may take up to 24 hours. You will not be able to send transactions from the wallet until the scanning process is completed.</string>
    <string name="resync_height_hint">Block height</string>
    <string name="resync_button">Resync</string>
    <string name="resync_faq">FAQ</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="btn_save">Save</string>
    <string name="app_guarda">Guarda</string>
    <string name="amount_coinify_you_sell">You sell</string>
    <string name="amount_coinify_you_get">You get</string>
    <string name="coinify_amount_min">Minimum sell:</string>
    <string name="coinify_amount_max">Maximum sell:</string>
    <string name="coinify_amount_exchange">Exchange fee:</string>
    <string name="coinify_amount_rate">Exchange rate:</string>
    <string name="coinify_add_int">Add international bank account</string>
    <string name="coinify_add_dan">Add danish bank account</string>
    <string name="coinify_bank_days">If the transaction is made within 15 min, Coinify will send a bank transfer within 2 bank days to a bank account in your name provided that all details are correct and complete.</string>
    <string name="coinify_addbank_expl">Remember that you can only use a bank account registered in your own name to receive the payout.\n\nThe bank account selected needs to have the same currency on the Sell Order. On the contrary, conversation fees might apply.\n\nIt is your responsibility to check with your bank if they receive transfers from cryptocurrency companies.</string>
    <string name="lorem_ipsum" translatable="false">lorem ipsum dolor sit amet consectetuer adipiscing elit sed diam nonummy nibh</string>
</resources>