<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseWhiteBgColor"
    android:fitsSystemWindows="true"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:theme="@style/EditTextHintLightBlue">

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail_address"
            android:textColor="@color/editTextBlueGreyColor"
            android:textColorHint="@color/blueHintColor"
            android:textSize="@dimen/edit_text_text_size" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/til_user_email"
        android:layout_alignStart="@+id/til_user_email"
        android:textSize="14sp"
        android:textColor="@color/neutralGreyTextColor"
        android:layout_below="@+id/til_user_email"
        android:text="@string/lorem_ipsum"
        android:id="@+id/textView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_save_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            style="@style/colorButtonStyle"
            android:paddingEnd="15dp"
            android:paddingStart="25dp"
            android:text="@string/btn_save" />
    </RelativeLayout>
</RelativeLayout>