<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/baseWhiteBgColor"
    android:fitsSystemWindows="true"
    tools:layout_marginTop="40dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_int_bank"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/coinify_add_int"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/ic_arrow_right_purch"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_dan_bank"
        android:layout_below="@id/cv_int_bank"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/coinify_add_dan"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/ic_arrow_right_purch"/>
    </android.support.v7.widget.CardView>

    <com.guarda.ethereum.customviews.RobotoLightTextView
        android:id="@+id/tv_add_expl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/cv_dan_bank"
        android:background="@color/baseBgColor"
        android:gravity="fill_vertical|fill_horizontal"
        android:lineSpacingExtra="6dp"
        android:padding="16dp"
        android:text="@string/coinify_addbank_expl"
        android:textColor="@color/darkGreyText"
        android:textSize="12sp" />

</RelativeLayout>